--- a/src/NotFoundpage/NotFoundpage.style.css
+++ b/src/NotFoundpage/NotFoundpage.style.css
@@ -7,22 +7,29 @@
     background-color: #f8f9fa;
   }
 
-  .error-content {
+.error-content {
     text-align: center;
   }
 
-  .error-content h1 {
+.error-content h1 {
     font-size: 6rem;
     font-weight: bold;
     margin-bottom: 1rem;
   }
 
-  .error-content p {
+.error-content p {
     font-size: 1.5rem;
     margin-bottom: 2rem;
   }
 
-  .lottie-animation {
+.lottie-animation {
     max-width: 400px;
     margin-bottom: 2rem;
   }
+
+.btn.btn-primary:hover {
+    background-color: #ADD8E6 !important;
+    border-color: #ADD8E6 !important;
+    color: #000 !important;
+  }
+  
