--- a/src/pages/Homepage/components/Banner/Banner.style.css
+++ b/src/pages/Homepage/components/Banner/Banner.style.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: 'LeferiPoint-SpecialItalicA';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-SpecialItalicA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+.main-title {
+    font-family: 'LeferiPoint-SpecialItalicA';
+    font-weight : bold
+}
+.main-overview {
+    font-family: 'LeferiPoint-SpecialItalicA'
+}
+.release-year {
+    font-size: 0.4em; /* 부모 글자 크기의 70% 크기로 설정 */
+    margin-left: 0.5rem;
+  }
+.rating {
+    padding-bottom: 20px;
+}
+
 .banner {
     height: 56vh;
     background-position: center;
@@ -16,11 +37,16 @@
     width: 36%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     height: 100%;
     padding: 2rem;
 }
-
-.banner-text-area > *{
-    z-index: 2;
+.banner-text-area h1 {
+    font-weight: bold;
 }
+.banner-text-area > *{
+    z-index: 1;
+}
+
+
+
