--- a/src/pages/Homepage/components/UpcomingMovieSlider/UpcomingMovieSlider.style.css
+++ b/src/pages/Homepage/components/UpcomingMovieSlider/UpcomingMovieSlider.style.css
@@ -5,7 +5,7 @@
     font-style: normal;
 }
 
-.main-popular-movie {
+.main-upcoming-movie {
     font-family: 'RixYeoljeongdo_Regular';
     color: white;
     font-size: 2.5rem;
@@ -14,4 +14,5 @@
 .carousel-container {
     overflow: hidden;
     height: 440px;
+    padding-left: 50px;   
 }
