--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -55,3 +55,13 @@
     background: transparent;
     padding: 0;
 }
+
+@media (hover: none), (max-width: 768px) {
+    .movie-card:hover {
+      transform: none !important;
+      z-index: auto !important;
+    }
+    .overlay:hover {
+      opacity: 0 !important;
+    }
+  }
