--- a/src/common/MovieSlider/MovieSlider.style.css
+++ b/src/common/MovieSlider/MovieSlider.style.css
@@ -49,6 +49,7 @@
     .carousel-container {
         height: 300px !important;
         width: 500px !important;   
+        padding-left: 10px !important; 
     }
     .movie-slider {
         padding: 0 !important;
