--- a/src/common/MovieSlider/MovieSlider.style.css
+++ b/src/common/MovieSlider/MovieSlider.style.css
@@ -14,9 +14,8 @@
 .carousel-container {
     overflow: hidden;
     height: 440px;
-    padding-left: 50px;  
-    padding-left: 0 !important;
-  margin-left: 0 !important;
+    padding-left: 50px !important;
+    margin-left: 0 !important;
     
 }
 
@@ -39,20 +38,15 @@
     
 }
 @media (max-width: 464px) {
-    .main-moviename {
-      font-size: 1.5rem;   
-      padding: 1.5rem 0 0 2rem;
-    }
-    .main-icon {
-        font-size: 28px; 
-    }
     .carousel-container {
-        height: 300px !important;
-        width: 500px !important;   
-        padding-left: 10px !important; 
+      width: 100vw !important;      
+      padding-left: 2vw !important;  
+      box-sizing: border-box;        
+      overflow: hidden;              
     }
     .movie-slider {
-        padding: 0 !important;
-        margin: 0 5px; 
-      }
+      padding: 0 !important;
+      margin: 0 2vw;                 
+    }
   }
+  
