--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -12,6 +12,7 @@
     background-size: cover;
     cursor: pointer;
     transition: 0.5s;
+    position: relative;
     
 }
 .moviecard-badge {
@@ -56,11 +57,14 @@
     padding: 0;
 }
 
-@media (max-width: 464px) and (hover: none) {
+@media (max-width: 464px)  {
     .movie-card:hover {
       transform: none !important;
     }
     .movie-card {
         width: 80vw;
-      }
+    }
+    .overlay {
+        opacity: 1 !important;
+    }
   }
