--- a/src/pages/MovieDetail/MovieDetail.style.css
+++ b/src/pages/MovieDetail/MovieDetail.style.css
@@ -25,7 +25,7 @@
     padding-bottom: 2rem;
 }
 .credit-cast{
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     padding-bottom: 1rem;
 }
@@ -34,3 +34,9 @@
     margin: 0 0 0 0;
 }
 
+.detail-review{
+    font-size: 2rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
