mobile hamburger modify and budget modify

--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -13,6 +13,7 @@
     cursor: pointer;
     transition: 0.5s;
     position: relative;
+    background-position: center;
     
 }
 .moviecard-badge {
