--- a/src/pages/MovieDetail/MovieDetail.style.css
+++ b/src/pages/MovieDetail/MovieDetail.style.css
@@ -41,9 +41,44 @@
     padding-top: 1rem;
     
 }
+.detail-similar{
+    font-size: 2rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+.detail-cast{
+    font-size: 2rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
 
+.similar-section{
+    font-size: 2rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
 .placeholder-img {
     width: 100%;
     height: 255px; 
     background-color: #ccc; 
+}
+.similar-section .carousel-container {
+    padding: 0.2rem !important;
+}
+
+  
+.similar-section .movie-card:hover .overlay {
+    font-size: 0.9rem !important;
+    line-height: 1.2 !important;
+  }
+  
+.similar-section .movie-card:hover .overlay .moviecard-badge {
+    font-size: 0.75rem !important;
+  }
+.similar-section .movie-card:hover .overlay p,
+.similar-section .movie-card:hover .overlay div {
+    font-size: 0.9rem !important;
   }
