--- a/src/Footer/Footer.style.css
+++ b/src/Footer/Footer.style.css
@@ -16,6 +16,7 @@ html, body {
     font-family: 'Arial', sans-serif;
     font-size: 0.9rem;
     padding-bottom: 1rem;
+    padding-top: 0.5rem;
   }
   
 .footer-content {
