--- a/src/pages/Homepage/components/Banner/Banner.style.css
+++ b/src/pages/Homepage/components/Banner/Banner.style.css
@@ -52,9 +52,47 @@
     z-index: 1;
 }
 
-@media (max-width: 464px) {
-    .main-overview {
-      display: none;
-    }
+@media (max-width: 1024px) {
+  .main-title {
+    font-size: 2.2rem;
   }
-  
+  .release-year {
+    font-size: 1.1rem;
+    margin-left: 0.3rem;
+  }
+  .main-overview {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 768px) {
+    .main-title {
+    font-size: 0.8rem;
+  }
+  .release-year {
+    font-size: 0.9rem;
+    margin-left: 0.2rem;
+  }
+  .main-overview {
+    font-size: 0.85rem;
+    display: none; /*  모바일에서 개요 숨기기 */
+  }
+  }
+
+
+/* 모바일: 767px 이하 */
+@media (max-width: 412px) {
+  .main-title {
+    font-size: 0.8rem;
+  }
+  .release-year {
+    font-size: 0.9rem;
+    margin-left: 0.2rem;
+  }
+  .main-overview {
+    font-size: 0.85rem;
+    display: none; /*  모바일에서 개요 숨기기 */
+  }
+  .rating {
+    display: none;
+  }
+}
