--- a/src/pages/Homepage/components/Banner/Banner.style.css
+++ b/src/pages/Homepage/components/Banner/Banner.style.css
@@ -26,7 +26,7 @@
 .main-overview {
     font-size: 0.7em;
 }
-/*  배너 밑으로 갈수록 흐리게 인데 나중에 할거면?? 일단 수정 
+/*  배너 밑으로 갈수록 흐리게 인데 나중에 할거면?? 비포삭제 
  */
 .banner:before {
     content:'';
